<resources>
    <string name="app_name">My Application</string>
    <string name="usernameEmptyField">username</string>
    <string name="startNewDialogButton">Start new dialog</string>
    <string name="singUpSwitcher">Sing Up</string>
    <string name="enterUsernameField">Username</string>
    <string name="enterPasswordField">Password</string>
    <string name="forgetPasswordButton">Forget Password?</string>
    <string name="logInButton">Log In</string>
    <string name="logInSwitcher">Log In</string>
    <string name="enterNameField">Name</string>
    <string name="enterSurnameField">Surname</string>
    <string name="enterConfirmPasswordField">Confirm Password</string>
    <string name="signInButton">Sign In</string>
    <string name="imageContentDescription">Image</string>
    <string name="thisIsSentMessageExample">This is sent message</string>
    <string name="thisIsReceiveMessageExample">This is receive message</string>
    <string name="typeMessageButton">Write a message</string>
    <string name="sentMessageTimestampExample">12:30</string>
    <string name="selectUserNewDialogBox">Select User</string>
    <string name="startEnterUsernameBox">Start enter username</string>
    <string name="im_button_example">M</string>
    <string name="username_example">musernameexample</string>
    <string name="change_password_text">Change password</string>
    <string name="log_out_text">Log out</string>
    <string name="clear_cache_text">Clear cache</string>
    <string name="login_history_text">Login history</string>
    <string name="time_login_example">2022–02–02 23:22:21</string>
    <string name="phone_login_example">Phone: Google Pixel 6 Pro</string>
    <string name="version_example">0.0.1</string>
</resources>