<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/timeText"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_login_example"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:fontFamily="sans-serif-medium"/>

    <TextView
            android:id="@+id/deviceText"
            android:layout_below="@+id/timeText"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_login_example"
            android:textSize="15sp"
            android:textStyle="normal"
            android:fontFamily="sans-serif-medium"/>

    <TextView
            android:id="@+id/versionText"
            android:layout_below="@+id/deviceText"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_example"
            android:textSize="15sp"
            android:textStyle="normal"
            android:fontFamily="sans-serif-medium"/>
    <View
            android:layout_below="@+id/versionText"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#31000000"
            android:layout_centerInParent="true"/>
</RelativeLayout>